change class name

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             <li><h3>Javascript</h3>
                 <span class="bar"><span class="javascript"></span></span>
                 </li>
-                <li><h3>Php</h3>
-                    <span class="bar"><span class="php"></span></span>
+                <li><h3>React js</h3>
+                    <span class="bar"><span class="React"></span></span>
                     </li>
     </div>
 
